--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                     <a href="https://raw.githubusercontent.com/canyinghao2/manhua/master/apk/com.comic.iyouman_1711172255_1.0.0.1.apk"
                        class="android-btn">Android</a>
 
+
+    <a href="https://lkme.cc/ZyC/Gh7n8jEz9" class="iphone-btn">Test</a>
+  
                 </div>
             </div>
         </div>
