--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" type="text/css" href="./file/area_2.css">
     <link rel="stylesheet" type="text/css" href="./file/mobile_download.css">
     <script src="https://static.lkme.cc/linkedme.min.js" ></script>
-
+  <script src="https://raw.githubusercontent.com/zenorocha/clipboard.js/master/dist/clipboard.min.js" ></script>
 
 </head>
 <body>
@@ -54,6 +54,11 @@
         </div>
 
     </div>
+
+    <button class="btn" data-clipboard-text="Just because you can doesn't mean you should — clipboard.js">
+    Copy to clipboard
+</button>
+
     <div class="gbottom" style="background-color: #2aa4ce">
         <p>
             Copyright &copy; 2017&nbsp;iyouman.com&nbsp;
