--- a/test.html
+++ b/test.html
@@ -2,13 +2,8 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title></title>
-    <link rel="stylesheet" type="text/css" href="../css/public.css"/>
-    <style type="text/css">
-        #list{width: 1250px;margin: 100px auto 0;}
-        li{float:left;width: 300px;height: 400px;border: 1px solid #999;margin: 10px 0 10px 10px;}
-        img{width: 100%;height: 100%;}
-    </style>
+    <title>xxx</title>
+
     <script src="js/jquery-1.7.1.min.js" type="text/javascript"></script>
     <script src="js/jquery.tmpl.min.js" type="text/javascript"></script>
 
@@ -24,6 +19,11 @@
         function getuser()
         {
             $("#toApp").attr("src","tkanmanapp://getuser?callback=saveuser");
+        }
+
+        function getshowuser()
+        {
+            $("#toApp").attr("src","tkanmanapp://getuser?callback=showuser");
         }
 
         function closepage()
@@ -46,9 +46,15 @@
         {
             if(!data||!data.Uid) {
 
-                alert(data.Uname)
+                alert(data.Uname);
 
             }
+        }
+
+
+        function showuser(data)
+        {
+            alert(data);
         }
 
 
@@ -63,6 +69,7 @@
 <a href="javascript:normalscreen()"> 正常模式</a><br/>
 <a href="javascript:closepage()"> 关闭页面</a><br/>
 <a href="javascript:getuser()"> 获取用户信息</a><br/>
+<a href="javascript:getshowuser()"> 获取用户信息</a><br/>
 
 
 
