--- a/test.html
+++ b/test.html
@@ -48,7 +48,7 @@
 
                 alert(data.Uid+"  "+data.Uname);
 
-            
+
         }
 
 
@@ -60,7 +60,7 @@
 
 
 
-        gotoLogin();
+        getuser();
 
     </script>
 </head>
