--- a/test.html
+++ b/test.html
@@ -45,8 +45,7 @@
         function saveuser(data)
         {
 
-
-                alert(data.Uid+"  "+data.Uname);
+                alert(data.uid+"  "+data.name);
 
 
         }
@@ -58,9 +57,7 @@
             alert(last);
         }
 
-
-
-        getuser();
+        
 
     </script>
 </head>
