--- a/testsdk.html
+++ b/testsdk.html
@@ -25,7 +25,7 @@
 
         function testsdk(comicId,chapterId,ispay) {
 
-            alert("漫画:"+comicId + "章节:" + chapterId+" "+ispay?"已付费":"未付费");
+            alert("漫画:"+comicId + "章节:" + chapterId+" "+(ispay?"已付费":"未付费"));
         }
 
 
