--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
 
     <script src="js/jquery-1.7.1.min.js" type="text/javascript"></script>
     <script src="js/jquery.tmpl.min.js" type="text/javascript"></script>
-
+    <script src="./clipboard.min.js" ></script>
     <script type="text/javascript">
 
         $(function () {
@@ -14,6 +14,33 @@
             iframe.setAttribute('id', 'toApp');
             iframe.setAttribute('style', 'display:none');
             document.body.appendChild(iframe);
+
+
+            var clipboard = new Clipboard('.btn');
+
+            clipboard.on('success', function(e) {
+                console.info('Action:', e.action);
+                console.info('Text:', e.text);
+                console.info('Trigger:', e.trigger);
+
+                e.clearSelection();
+            });
+
+            clipboard.on('error', function(e) {
+                console.error('Action:', e.action);
+                console.error('Trigger:', e.trigger);
+            });
+
+
+            var url = location.search; //获取url中"?"符后的字串
+            var str = "";
+            if (url.indexOf("?") != -1) {
+                str = url.substr(1);
+                console.log(str);
+            }
+
+            $(".btn").attr("data-clipboard-text", "tkanmanapp://sharecomic?"+str);
+
         });
 
         function comicshare() {
@@ -64,7 +91,7 @@
 </head>
 <body>
 
-<a href="javascript:comicshare()"> 打开app</a><br/>
+<a class="btn" href="javascript:comicshare()" > 打开app</a><br/>
 
 
 
