--- a/test.html
+++ b/test.html
@@ -85,13 +85,22 @@
         }
 
 
-
+        function share() {
+            $("#toApp").attr("src", "tkanmanapp://share?title=hello&link=http%3A%2F%2Fwww.baidu.com&content=%E5%88%86%E4%BA%AB%E6%96%87%E5%AD%97&image=http%3A%2F%2Fwww.kanman.com%2Fstatic%2Fkanman_logo.png&callback=sharecallback");
+        }
+        
+        function sharecallback(platform) {
+            alert( "分享到" + platform+"成功!");
+        }
 
     </script>
 </head>
 <body>
 
-<a class="btn" href="javascript:comicshare()" > 打开app</a><br/>
+
+<a class="btn" href="javascript:getshowuser()" >获取用户信息</a><br/>
+<a class="btn" href="javascript:share()" > 分享</a><br/>
+
 
 
 
