--- a/test.html
+++ b/test.html
@@ -93,11 +93,16 @@
             alert( "分享到" + platform+"成功!");
         }
 
+        function webtoapp() {
+            $("#toApp").attr("src", "tkanmanapp://goto?page=web&url=https%3A%2F%2Fcanyinghao2.github.io%2Fmanhua%2Ftest.html");
+        }
+
     </script>
 </head>
 <body>
 
 
+<a class="btn" href="javascript:webtoapp()" >app内打开此页面</a><br/>
 <a class="btn" href="javascript:getshowuser()" >获取用户信息</a><br/>
 <a class="btn" href="javascript:share()" > 分享</a><br/>
 
