--- a/test.html
+++ b/test.html
@@ -90,7 +90,7 @@
         }
         
         function sharecallback(platform) {
-            alert( "分享到" + platform+"成功!");
+            alert( "分享到" + platform.toString()+"成功!");
         }
 
         function webtoapp() {
