--- a/test_zy.html
+++ b/test_zy.html
@@ -94,7 +94,7 @@
         }
 
         function webtoapp() {
-            $("#toApp").attr("src", "zymkapp://goto?page=web&url=https%3A%2F%2Fcanyinghao2.github.io%2Fmanhua%2Ftest.html");
+            $("#toApp").attr("src", "zymkapp://goto?page=web&url=https%3A%2F%2Fcanyinghao2.github.io%2Fmanhua%2Ftest_zy.html");
         }
 
     </script>
