--- a/test.html
+++ b/test.html
@@ -97,6 +97,16 @@
             $("#toApp").attr("src", "tkanmanapp://goto?page=web&url=https%3A%2F%2Fcanyinghao2.github.io%2Fmanhua%2Ftest.html");
         }
 
+
+         function getShareConf (){
+            return {
+                title: 'h5活动页',
+                content: 'h5活动页描述',
+                image: 'http://www.kanman.com/static/kanman_logo.png'
+            }
+        }
+
+
     </script>
 </head>
 <body>
