--- a/test.html
+++ b/test.html
@@ -102,7 +102,9 @@
             return {
                 title: 'h5活动页',
                 content: 'h5活动页描述',
-                image: 'http://www.kanman.com/static/kanman_logo.png'
+                image: 'http://www.kanman.com/static/kanman_logo.png',
+                url: 'http://www.baidu.com',
+                callback:"sharecallback"
             }
         }
 
