--- a/test.html
+++ b/test.html
@@ -102,7 +102,7 @@
             return {
                 title: 'h5活动页',
                 content: 'h5活动页描述',
-                image: 'http://www.kanman.com/static/kanman_logo.png',
+                image: 'https://www.baidu.com/img/bd_logo1.png',
                 url: 'http://www.baidu.com',
                 callback:"sharecallback"
             }
