--- a/test_zy.html
+++ b/test_zy.html
@@ -96,6 +96,9 @@
         function webtoapp() {
             $("#toApp").attr("src", "zymkapp://goto?page=web&url=https%3A%2F%2Fcanyinghao2.github.io%2Fmanhua%2Ftest_zy.html");
         }
+        function webtocomic() {
+            $("#toApp").attr("src", "zymkapp://goto?page=web&url=http%3A%2F%2Freaddemo.321mh.com%2F%3Fcomic_id%3D3%26chapter_id%3D3259%26key%3DA03A6075EE48FB1EDDB7DC3CE5E39253");
+        }
 
     </script>
 </head>
@@ -103,6 +106,7 @@
 
 
 <a class="btn" href="javascript:webtoapp()" >app内打开此页面</a><br/>
+<a class="btn" href="javascript:webtocomic()" >app内打开漫画h5</a><br/>
 <a class="btn" href="javascript:getshowuser()" >获取用户信息</a><br/>
 <a class="btn" href="javascript:share()" > 分享</a><br/>
 
