--- a/test_zy.html
+++ b/test_zy.html
@@ -97,7 +97,7 @@
             $("#toApp").attr("src", "zymkapp://goto?page=web&url=https%3A%2F%2Fcanyinghao2.github.io%2Fmanhua%2Ftest_zy.html");
         }
         function webtocomic() {
-            $("#toApp").attr("src", "zymkapp://goto?page=web&url=http%3A%2F%2Freaddemo.321mh.com%2F%3Fcomic_id%3D3%26chapter_id%3D3259%26key%3DA03A6075EE48FB1EDDB7DC3CE5E39253");
+            $("#toApp").attr("src", "zymkapp://goto?page=web&url=http%3A%2F%2Freaddemo.321mh.com%2F%3Fcomic_id%3d3%26chapter_id%3d3259%26key%3dA03A6075EE48FB1EDDB7DC3CE5E39253");
         }
 
     </script>
