--- a/test_zy.html
+++ b/test_zy.html
@@ -96,7 +96,9 @@
         function webtoapp() {
             $("#toApp").attr("src", "zymkapp://goto?page=web&url=https%3A%2F%2Fcanyinghao2.github.io%2Fmanhua%2Ftest_zy.html");
         }
-        function webtocomic() {
+        function webtocomickm() {
+            $("#toApp").attr("src", "tkanmanapp://goto?page=web&url=http%3A%2F%2Freaddemo.321mh.com%2F%3Fcomic_id%3D3%26chapter_id%3D3259%26key%3DA03A6075EE48FB1EDDB7DC3CE5E39253");
+        } function webtocomiczy() {
             $("#toApp").attr("src", "zymkapp://goto?page=web&url=http%3A%2F%2Freaddemo.321mh.com%2F%3Fcomic_id%3d3%26chapter_id%3d3259%26key%3dA03A6075EE48FB1EDDB7DC3CE5E39253");
         }
 
@@ -106,7 +108,8 @@
 
 
 <a class="btn" href="javascript:webtoapp()" >app内打开此页面</a><br/>
-<a class="btn" href="javascript:webtocomic()" >app内打开漫画h5</a><br/>
+<a class="btn" href="javascript:webtocomickm()" >app内打开漫画h5 km</a><br/>
+<a class="btn" href="javascript:webtocomiczy()" >app内打开漫画h5 zy</a><br/>
 <a class="btn" href="javascript:getshowuser()" >获取用户信息</a><br/>
 <a class="btn" href="javascript:share()" > 分享</a><br/>
 
