--- a/test.html
+++ b/test.html
@@ -98,7 +98,7 @@
         }
 
         function baiduinapp() {
-            $("#toApp").attr("src", "tkanmanapp://goto?page=dir&comic_id=25934#Intent;component=com.wbxm.icartoon/.ui.detail.DetailActivity;S.intent_id=25934;end");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=dir&comic_id=25934&inbaidu=ture#Intent;component=com.wbxm.icartoon/.ui.detail.DetailActivity;S.intent_id=25934;end");
         }
 
 
