--- a/test.html
+++ b/test.html
@@ -107,6 +107,14 @@
         }
 
 
+        function rigeng() {
+            $("#toApp").attr("src", "tkanmanapp://goto?page=web&url=tkanmanapp%3A%2F%2Fgoto%3Fpage%3Dsortlist%26class_id%3D137%26sort%3Drigeng%26key%3D");
+        }
+        function classification() {
+            $("#toApp").attr("src", "tkanmanapp://goto?page=web&url=tkanmanapp%3A%2F%2Fgoto%3Fpage%3Dclassification");
+        }
+
+
          function getShareConf (){
             return {
                 title: 'h5活动页',
@@ -128,6 +136,9 @@
 <a class="btn" href="javascript:share()" > 分享</a><br/>
 <a class="btn" href="javascript:gotoComic()" > 打开漫画</a><br/>
 <a class="btn" href="javascript:baiduinapp()" >百度应用内搜索</a><br/>
+
+<a class="btn" href="javascript:rigeng()" >日更</a><br/>
+<a class="btn" href="javascript:classification()" >分类</a><br/>
 
 
 
