--- a/test.html
+++ b/test.html
@@ -108,7 +108,7 @@
 
 
         function rigeng() {
-            $("#toApp").attr("src", "tkanmanapp://goto?page=web&url=tkanmanapp%3A%2F%2Fgoto%3Fpage%3Dsortlist%26class_id%3D137%26sort%3Drigeng%26key%3D");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=web&url=tkanmanapp%3A%2F%2Fgoto%3Fpage%3Dsortlist%26class_id%3D137");
         }
         function classification() {
             $("#toApp").attr("src", "tkanmanapp://goto?page=web&url=tkanmanapp%3A%2F%2Fgoto%3Fpage%3Dclassification");
