--- a/iframe.html
+++ b/iframe.html
@@ -12,16 +12,21 @@
 
             var iframe = document.createElement('iframe');
             iframe.setAttribute('id', 'toApp');
-            iframe.setAttribute('style', 'display:none');
             iframe.setAttribute("src", url);
+            iframe.setAttribute("width", "100%");
+            iframe.setAttribute("height", "100%");
+            iframe.setAttribute("frameborder", 0);
             document.body.appendChild(iframe);
 
+            return url;
         }
 
         function replaceIframe(url) {
 
             var iframe = document.getElementById("toApp");
             iframe.setAttribute("src", url);
+
+            return url;
 
         }
 
