--- a/test.html
+++ b/test.html
@@ -100,6 +100,12 @@
 
         function gotoComic() {
             $("#toApp").attr("src", "tkanmanapp://goto?page=dir&comic_id=25934");
+
+        }
+
+        function gotoComicIOS() {
+
+            $("#toApp").attr("src", "https://comicsdk.321mh.com/app/25934/");
         }
 
         function baiduinapp() {
@@ -134,7 +140,7 @@
 <a class="btn" href="javascript:webtoapp()" >app内打开此页面</a><br/>
 <a class="btn" href="javascript:getshowuser()" >获取用户信息</a><br/>
 <a class="btn" href="javascript:share()" > 分享</a><br/>
-<a class="btn" href="javascript:gotoComic()" > 打开漫画</a><br/>
+<a class="btn" href="javascript:gotoComicIOS()" > 打开漫画</a><br/>
 <a class="btn" href="javascript:baiduinapp()" >百度应用内搜索</a><br/>
 
 <a class="btn" href="javascript:rigeng()" >日更</a><br/>
