--- a/test.html
+++ b/test.html
@@ -141,7 +141,7 @@
 <a class="btn" href="javascript:getshowuser()" >获取用户信息</a><br/>
 <a class="btn" href="javascript:share()" > 分享</a><br/>
 <a class="btn" href="javascript:gotoComicIOS()" > 打开漫画</a><br/>
-<a class="btn" href="https://comicsdk.321mh.com/app/25934/" > 打开漫画IOS</a><br/>
+<a class="btn" href="http://comicsdk.321mh.com/app/25934/" > 打开漫画IOS</a><br/>
 <a class="btn" href="javascript:baiduinapp()" >百度应用内搜索</a><br/>
 
 <a class="btn" href="javascript:rigeng()" >日更</a><br/>
