--- a/test.html
+++ b/test.html
@@ -103,10 +103,7 @@
 
         }
 
-        function gotoComicIOS() {
 
-            $("#toApp").attr("src", "https://comicsdk.321mh.com/app/25934/");
-        }
 
         function baiduinapp() {
             $("#toApp").attr("src", "tkanmanapp://goto?page=dir&comic_id=25934&inbaidu=ture#Intent;component=com.wbxm.icartoon/.ui.detail.DetailActivity;S.intent_id=25934;end");
@@ -140,13 +137,17 @@
 <a class="btn" href="javascript:webtoapp()" >app内打开此页面</a><br/>
 <a class="btn" href="javascript:getshowuser()" >获取用户信息</a><br/>
 <a class="btn" href="javascript:share()" > 分享</a><br/>
-<a class="btn" href="javascript:gotoComicIOS()" > 打开漫画</a><br/>
-<a class="btn" href="http://comicsdk.321mh.com/app/25934/" > 打开漫画IOS</a><br/>
+<a class="btn" href="javascript:gotoComic()" > 打开漫画</a><br/>
 <a class="btn" href="javascript:baiduinapp()" >百度应用内搜索</a><br/>
 
 <a class="btn" href="javascript:rigeng()" >日更</a><br/>
 <a class="btn" href="javascript:classification()" >分类</a><br/>
 
+
+
+
+<a class="btn" href="https://comicsdk.321mh.com/kmh_app/?page=dir&comic_id=25934" > IOS打开漫画</a><br/>
+<a class="btn" href="https://comicsdk.321mh.com/kmh_app/" > IOS打开APP</a><br/>
 
 
 
