--- a/iframe.html
+++ b/iframe.html
@@ -6,37 +6,39 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
 
-    <script type="text/javascript">
-
-        function addIframe(url) {
-
-            var iframe = document.createElement('iframe');
-            iframe.setAttribute('id', 'toApp');
-            iframe.setAttribute("src", url);
-            iframe.setAttribute("width", "100%");
-            iframe.setAttribute("height", "100%");
-            iframe.setAttribute("frameborder", 0);
-            document.body.appendChild(iframe);
-
-            return url;
-        }
-
-        function replaceIframe(url) {
-
-            var iframe = document.getElementById("toApp");
-            iframe.setAttribute("src", url);
-
-            return url;
-
-        }
-
-
-    </script>
 
 
 </head>
 <body>
 
+
+<div id="iframe-box">
+    <iframe id="ifram" src="https://www.baidu.com" width="100%"></iframe>
+</div>
+
+<style>
+    #ifram {
+        border: 0;
+        width: 1px;
+        min-width: 100%;
+        *width: 100%;
+    }
+</style>
+<script>
+
+    let ifram = document.getElementById('ifram');
+    if (navigator.userAgent.match(/iPad|iPhone/i)) {
+        let iframe_box = document.getElementById('iframe-box');
+        iframe_box.style.width = 100 + '%';
+        iframe_box.style.overflowX = 'hidden';
+        iframe_box.style.overflowY = 'scroll';
+        iframe_box.style.webkitOverflowScrolling = 'touch';
+        ifram.setAttribute('scrolling', 'no');
+        iframe_box.appendChild(ifram)
+    }
+
+
+</script>　
 
 </body>
 </html>
