--- a/iframe.html
+++ b/iframe.html
@@ -13,7 +13,7 @@
 
 
 <div id="iframe-box">
-    <iframe id="ifram" src="https://comicgif.321mh.com/index/index.html?comic_id=106499&chapter_id=1549367&productname=kmh&platformname=android" width="100%"></iframe>
+    <iframe id="ifram" src="https://comicgif.321mh.com/nituzaishang/012/index.html#platformname=android&productname=aym&comic_id=106499&comic_name=%E9%80%86%E5%BE%92%E5%9C%A8%E4%B8%8A" width="100%"></iframe>
 </div>
 
 <style>
