--- a/test.html
+++ b/test.html
@@ -119,11 +119,11 @@
 
 
         function dir() {
-            $("#toApp").attr("src", "tkanmanapp://goto?page=dir&comic_id=25933&chapter_id=1562627");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=dir&comic_id=25933&chapter_id=49872");
         }
 
         function dirH5() {
-            $("#toApp").attr("src", "tkanmanapp://goto?page=dir&comic_id=106499&chapter_id=1567649");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=dir&comic_id=106499&chapter_id=1549367");
         }
 
 
