--- a/test_zy.html
+++ b/test_zy.html
@@ -74,6 +74,16 @@
             $("#toApp").attr("src", "zymkapp://app?callback=normalscreen");
         }
 
+
+        function dir() {
+            $("#toApp").attr("src", "zymkapp://goto?page=dir&comic_id=1&chapter_id=106579");
+        }
+
+        function dirH5() {
+            $("#toApp").attr("src", "zymkapp://goto?page=dir&comic_id=2872&chapter_id=156880");
+        }
+
+
         function saveuser(data) {
 
             alert(data.uid + "  " + data.name);
@@ -112,6 +122,10 @@
 <a class="btn" href="javascript:webtocomiczy()" >app内打开漫画h5 zy</a><br/>
 <a class="btn" href="javascript:getshowuser()" >获取用户信息</a><br/>
 <a class="btn" href="javascript:share()" > 分享</a><br/>
+
+
+<a class="btn" href="javascript:dir()" > 打开阅读页</a><br/>
+<a class="btn" href="javascript:dirH5()" > 打开H5阅读页</a><br/>
 
 
 
