--- a/test.html
+++ b/test.html
@@ -89,8 +89,8 @@
             $("#toApp").attr("src", "tkanmanapp://share?title=hello&link=http%3A%2F%2Fwww.baidu.com&content=%E5%88%86%E4%BA%AB%E6%96%87%E5%AD%97&image=http%3A%2F%2Fwww.kanman.com%2Fstatic%2Fkanman_logo.png&callback=sharecallback");
         }
         
-        function sharecallback() {
-            alert( "分享到成功!");
+        function sharecallback(shareType) {
+            alert( "分享到成功! 类型:"+shareType);
         }
 
         function webtoapp() {
