--- a/test.html
+++ b/test.html
@@ -163,7 +163,11 @@
 <body>
 
 
-<a class="btn" href="javascript:webtoapp()">app内打开此页面</a><br/>
+<a class="btn" href="javascript:webtoapp()">app内打开此页面</a><br/><br/>
+
+<a class="btn" href="javascript:fullscreen()">全屏</a><br/>
+<a class="btn" href="javascript:normalscreen()">非全屏</a><br/>
+<a class="btn" href="javascript:closepage()">退出</a><br/><br/>
 
 
 <a class="btn" href="javascript:getshowuser()">获取用户信息</a><br/>
@@ -180,7 +184,7 @@
 
 
 <a class="btn" href="javascript:dir()"> 打开阅读页</a><br/>
-<a class="btn" href="javascript:dirH5()"> 打开H5阅读页</a><br/>
+<a class="btn" href="javascript:dirH5()"> 打开H5阅读页</a><br/><br/>
 
 
 <a class="btn" href="javascript:novelGril()"> 小说女生频道</a><br/>
