--- a/test.html
+++ b/test.html
@@ -110,10 +110,10 @@
 
 
         function rigeng() {
-            $("#toApp").attr("src", "tkanmanapp://goto?page=web&url=tkanmanapp%3A%2F%2Fgoto%3Fpage%3Dsortlist%26class_id%3D137");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=sortlist&class_id=137");
         }
         function classification() {
-            $("#toApp").attr("src", "tkanmanapp://goto?page=web&url=tkanmanapp%3A%2F%2Fgoto%3Fpage%3Dclassification");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=classification");
         }
 
 
