--- a/testjump.html
+++ b/testjump.html
@@ -37,23 +37,23 @@
 
 
         function comment() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=comment&comic_id=25933");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=comment&comic_id=25933");
         }
 
         function comicdata() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=comicdata&comic_id=25933&comic_name=斗破苍穹");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=comicdata&comic_id=25933&comic_name=斗破苍穹");
         }
 
         function fanscall() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=fanscall&comic_id=25933");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=fanscall&comic_id=25933");
         }
 
         function authors() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=authors&comic_id=25933");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=authors&comic_id=25933");
         }
 
         function ranking() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=ranking");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=ranking");
         }
 
         function classification() {
@@ -65,105 +65,105 @@
         }
 
         function comicbook() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=comicbook&book_id=27200250&book_type=6");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=comicbook&book_id=27200250&book_type=6");
         }
 
         function buyhistory() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=buyhistory&comic_id=5323&comic_name=神印王座");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=buyhistory&comic_id=5323&comic_name=神印王座");
         }
 
         function search() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=search");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=search");
         }
 
         function update() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=update");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=update");
         }
 
         function community() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=community");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=community");
         }
         function shelves() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=shelves");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=shelves");
         }
         function mine() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=mine");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=mine");
         }
         function communitycircle() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=communitycircle&star_id=103722");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=communitycircle&star_id=103722");
         }
 
         function communityarticle() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=communityarticle&satellite_id=123147&star_id=103722");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=communityarticle&satellite_id=123147&star_id=103722");
         }
         function signin() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=signin");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=signin");
         }
 
         function follow() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=follow");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=follow");
         }
         function fans() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=fans");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=fans");
         }
         function diamonddetail() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=diamonddetail");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=diamonddetail");
         }
         function coindetail() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=coindetail");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=coindetail");
         }
         function recommendticketdetail() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=recommendticketdetail");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=recommendticketdetail");
         }
 
         function monthticketdetail() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=monthticketdetail");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=monthticketdetail");
         }
         function vipdetail() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=vipdetail");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=vipdetail");
         }
         function account() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=account");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=account");
         }
         function bindPhone() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=bindPhone");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=bindPhone");
         }
         function setup() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=setup");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=setup");
         }
 
         function feedback() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=feedback");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=feedback");
         }
         function login() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=login");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=login");
         }
         function game() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=game");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=game");
         }
         function welfare() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=welfare");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=welfare");
         }
 
         function rechargevip() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=rechargevip");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=rechargevip");
         }
         function recharge() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=recharge");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=recharge");
         }
 
         function task() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=task");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=task");
         }
         function notification() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=notification");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=notification");
         }
 
         function localread() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=localread");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=localread");
         }
         function contactus() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=contactus");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=contactus");
         }
 
 
@@ -202,7 +202,7 @@
         }
 
         function novelcomment() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=novelcomment&novel_id=5000114");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=novelcomment&novel_id=5000114");
         }
 
         function novelbook() {
@@ -210,43 +210,43 @@
         }
 
         function novelsearch() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=novelsearch");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=novelsearch");
         }
 
         function novelshelves() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=novelshelves");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=novelshelves");
         }
 
         function novelmine() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=novelmine");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=novelmine");
         }
 
         function novelwallet() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=novelwallet");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=novelwallet");
         }
         function novelrecent() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=novelrecent");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=novelrecent");
         }
 
         function novelfeedback() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=novelfeedback");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=novelfeedback");
         }
         function novelsetup() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=novelsetup");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=novelsetup");
         }
 
         function novelrecharge() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=novelrecharge");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=novelrecharge");
         }
         function novelrechargerecord() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=novelrechargerecord");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=novelrechargerecord");
         }
         function noveluserecord() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=noveluserecord");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=noveluserecord");
         }
 
         function novelmonthticket() {
-            $("#toApp").attr("src", "tkanmanappp://goto?page=novelmonthticket");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=novelmonthticket");
         }
     </script>
 </head>
