--- a/testjump.html
+++ b/testjump.html
@@ -282,7 +282,7 @@
 <a class="btn" href="javascript:coindetail()"> 金币明细</a><br/>
 <a class="btn" href="javascript:recommendticketdetail()"> 推荐票明细</a><br/>
 <a class="btn" href="javascript:monthticketdetail()"> 月票明细</a><br/>
-<a class="btn" href="javascript:vipdetail()"> 月票明细</a><br/>
+<a class="btn" href="javascript:vipdetail()"> VIP明细</a><br/>
 <a class="btn" href="javascript:account()"> 用户资料</a><br/>
 <a class="btn" href="javascript:bindPhone()"> 绑定手机</a><br/>
 <a class="btn" href="javascript:setup()"> 设置</a><br/>
