--- a/testjump.html
+++ b/testjump.html
@@ -335,7 +335,7 @@
 <a class="btn" href="javascript:novelmonthticket()"> 小说月票</a><br/><br/><br/>
 
 
-<a class="btn" href="https://www.kanman.com/106844/yg.html">网站阅读页</a><br/>
+<a class="btn" href="https://www.kanman.com/25933/fw19.html">网站阅读页</a><br/>
 <a class="btn" href="javascript:advVideo()">调用视频广告</a><br/>
 <a class="btn" href="javascript:dirRead0()">漫画最新一章的阅读页</a><br/>
 <a class="btn" href="javascript:dirReadStr()">通过newId打开阅读页</a><br/>
