--- a/test_zy.html
+++ b/test_zy.html
@@ -133,7 +133,8 @@
 <a class="btn" href="javascript:share()" > 分享</a><br/>
 
 
-<a class="btn" href="https://www.zymk.cn/2742/175140.html" > web端阅读页</a><br/>
+<a class="btn" href="https://www.zymk.cn/2742/175140.html" > web端阅读页tps://www.zymk.cn/2742/175140.html</a><br/>
+<a class="btn" href="https://www.zymk.cn/2742/" > web端详情页https://www.zymk.cn/2742/</a><br/>
 <a class="btn" href="javascript:communitycircle()"> 圈子详情页</a><br/>
 <a class="btn" href="javascript:communityarticle()"> 帖子详情页</a><br/>
 <a class="btn" href="javascript:dir()" > 打开阅读页</a><br/>
