--- a/test_zy.html
+++ b/test_zy.html
@@ -130,7 +130,7 @@
 <a class="btn" href="javascript:webtocomickm()" >app内打开漫画h5 km</a><br/>
 <a class="btn" href="javascript:webtocomiczy()" >app内打开漫画h5 zy</a><br/>
 <a class="btn" href="javascript:getshowuser()" >获取用户信息</a><br/>
-<a class="btn" href="javascript:share()" > 分享</a><br/>
+<a class="btn" href="javascript:share()" > 分享</a><br/><br/>
 
 
 <a class="btn" href="https://www.zymk.cn/2742/175140.html" > web端阅读页tps://www.zymk.cn/2742/175140.html</a><br/>
