--- a/testjump.html
+++ b/testjump.html
@@ -107,6 +107,11 @@
         function communityarticle() {
             $("#toApp").attr("src", "tkanmanapp://goto?page=communityarticle&satellite_id=123147&star_id=103722");
         }
+
+
+        function communitytopic() {
+            $("#toApp").attr("src", "tkanmanapp://goto?page=communitytopic&topic_id=1");
+        }
         function signin() {
             $("#toApp").attr("src", "tkanmanapp://goto?page=signin");
         }
@@ -297,6 +302,7 @@
 <a class="btn" href="javascript:mine()"> 我的</a><br/>
 <a class="btn" href="javascript:communitycircle()"> 圈子详情页</a><br/>
 <a class="btn" href="javascript:communityarticle()"> 帖子详情页</a><br/>
+<a class="btn" href="javascript:communitytopic()"> 话题详情页</a><br/>
 <a class="btn" href="javascript:signin()"> 签到</a><br/>
 <a class="btn" href="javascript:follow()"> 关注</a><br/>
 <a class="btn" href="javascript:fans()"> 粉丝</a><br/>
