--- a/testjump.html
+++ b/testjump.html
@@ -105,7 +105,7 @@
         }
 
         function communityarticle() {
-            $("#toApp").attr("src", "tkanmanapp://goto?page=communityarticle&satellite_id=123147&star_id=103722");
+            $("#toApp").attr("src", "tkanmanappp://goto?page=communityarticle&satellite_id=168185&star_id=103722");
         }
 
 
