--- a/test.html
+++ b/test.html
@@ -74,6 +74,9 @@
             $("#toApp").attr("src", "tkanmanapp://app?callback=normalscreen");
         }
 
+        function nopull() {
+            $("#toApp").attr("src", "tkanmanapp://app?callback=nopull");
+        }
         function saveuser(data) {
 
             alert(data.uid + "  " + data.name);
@@ -168,6 +171,7 @@
 <a class="btn" href="javascript:fullscreen()">全屏</a><br/>
 <a class="btn" href="javascript:normalscreen()">非全屏</a><br/>
 <a class="btn" href="javascript:closepage()">退出</a><br/><br/>
+<a class="btn" href="javascript:nopull()">不允许下拉</a><br/><br/>
 
 
 <a class="btn" href="javascript:getshowuser()">获取用户信息</a><br/>
