--- a/testjump.html
+++ b/testjump.html
@@ -32,7 +32,7 @@
 
         }
         function dirRead() {
-            $("#toApp").attr("src", "tkanmanapp://goto?page=dir&comic_id=25933&chapter_id=49872");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=dir&comic_id=106860&chapter_id=1592947");
         }
 
         function dirReadStr() {
